<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBackground"
        tools:context=".ui.measure.MeasureFragment">

        <TextView
            android:id="@+id/textHumanPart"
            android:layout_width="346dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/select_type_of_measure"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/measure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/measure"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:entries="@array/types_measure"
            android:fontFamily="@font/montserrat_bold"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHumanPart" />

        <TextView
                android:id="@+id/textHeadAche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/headAche"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner"
                android:visibility="gone" />

        <Spinner
                android:id="@+id/spinner2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:entries="@array/headache"
                android:fontFamily="@font/montserrat_bold"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textHeadAche"
                android:visibility="gone" />

        <TextView
            android:id="@+id/textNumberOfMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/number_of_movements"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

        <EditText
            android:id="@+id/editNumMov"
            android:layout_width="318dp"
            android:layout_height="57dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNumberOfMovement"
            tools:text="0"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textFeelings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/feelings"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNumMov" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:entries="@array/feel"
            android:fontFamily="@font/montserrat_bold"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFeelings" />

        <TextView
            android:id="@+id/textDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/distance"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner3" />

        <EditText
            android:id="@+id/editTextDistance"
            android:layout_width="318dp"
            android:layout_height="57dp"
            android:layout_marginTop="5dp"
            android:autoText="true"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDistance" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>