<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="straightening"
            type="String" />
        <variable
            name="bending"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBackground"
        tools:context=".ui.gonio.GonioFragment" >

        <TextView
            android:id="@+id/textFirstMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/angle_of_straightening"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textResultStraightening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@{straightening}"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFirstMeasure" />

        <Button
            android:id="@+id/buttonStartStraightening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/start"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResultStraightening" />

        <Button
            android:id="@+id/buttonFinishStraightening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResultStraightening" />

        <TextView
            android:id="@+id/textSecondMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/angle_of_bending"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFinishStraightening" />

        <TextView
            android:id="@+id/textResultBending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@{bending}"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSecondMeasure" />

        <Button
            android:id="@+id/buttonStartBending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:text="@string/start"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResultBending" />

        <Button
            android:id="@+id/buttonFinishBending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:text="@string/finish"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textResultBending" />

        <Button
            android:id="@+id/buttonSendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/send_data"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/buttonSendData"
            app:layout_constraintTop_toBottomOf="@+id/buttonFinishBending"
            tools:layout_editor_absoluteX="148dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>